--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo 'No tests, sorry!'",
-    "build": "elm make --yes src/Main.elm --output public/built/index.js",
+    "build": "elm make --yes --debug src/Main.elm --output public/built/index.js",
     "watch": "ls src/**.elm | entr npm run -s build",
     "serve": "cd public && browser-sync start --server --files \"built/*.js, *.css\"",
     "start": "run-p serve watch"
